--- a/src/main/resources/templates/contents/shozoku/shozokuList.html
+++ b/src/main/resources/templates/contents/shozoku/shozokuList.html
@@ -35,6 +35,7 @@
 					</tr>
 				</tbody>
 			</table>
+			<!-- ページング -->
 			<div th:replace="contents/component/pagenation :: page_contents"></div>
 		</div>
 	</div>
