--- a/src/main/resources/templates/contents/tantosha/tantoshaList.html
+++ b/src/main/resources/templates/contents/tantosha/tantoshaList.html
@@ -42,6 +42,7 @@
 					</tr>
 				</tbody>
 			</table>
+			<!-- ページング -->
 			<div th:replace="contents/component/pagenation :: page_contents"></div>
 		</div>
 	</div>
