--- a/src/main/resources/templates/homeLayout.html
+++ b/src/main/resources/templates/homeLayout.html
@@ -36,8 +36,8 @@
 						class="btn btn-secondary dropdown-toggle" data-toggle="dropdown"
 						aria-haspopup="true" aria-expanded="false">売上</button>
 					<div class="dropdown-menu" aria-labelledby="uriage">
-						<a class="dropdown-item" th:href="@{/sales}">売上登録</a> <a
-							class="dropdown-item" th:href="@{/salesList}">売上一覧</a>
+						<a class="dropdown-item" th:href="@{/sales/signup}">売上登録</a> <a
+							class="dropdown-item" th:href="@{/sales/list}">売上一覧</a>
 					</div>
 				</div>
 				<div class="dropdown">
