--- a/src/main/resources/templates/contents/customer/customerPurchase.html
+++ b/src/main/resources/templates/contents/customer/customerPurchase.html
@@ -3,39 +3,38 @@
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
 <meta charset="UTF-8">
-<title>売上一覧画面</title>
+<title>お客様購入履歴</title>
 </head>
 <body>
-	<div th:fragment="salesList_contents" class="h-100 w-100 uriage">
+	<div th:fragment="customerPurchase_contents" class="h-100 w-100">
 		<div class="content-title border-bottom">
-			<h2>売上一覧</h2>
+			<h2 th:inline="text">[[${customer.name}]] 様購入履歴</h2>
 		</div>
-		<div class="search-area d-flex w-25">
-			<input type="text" class="form-control mr-1 date" />
-			<button type="button" class="btn">検索</button>
+		<div th:if="${message}" class="alert alert-success">
+			<p th:text="${message}"></p>
 		</div>
-		<table id="salesList-table" class="table table-sm text-center"
-			style="width: 100%;">
-			<thead class="thead-dark">
-				<tr>
-					<th style="width: 7%;">受注番号</th>
-					<th style="width: 11%;">受注日</th>
-					<th>計上日</th>
-					<th>売場</th>
-					<th>KS担当</th>
-					<th colspan="3" style="width: 9%;">品名</th>
-					<th class="">番号1</th>
-					<th>番号2</th>
-					<th>上代</th>
-					<th>下代</th>
-					<th>仕切日</th>
-					<th>仕切No</th>
-					<th>客名</th>
-					<th></th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr th:each="sales : ${salesList}">
+		<div class="w-100">
+			<table class="table table-sm text-center table-responsive"
+				style="width: 100%;">
+				<thead class="customer">
+					<tr>
+						<td>受注番号</td>
+						<td>受注日</td>
+						<td>計上日</td>
+						<td>売場</td>
+						<td>KS担当</td>
+						<td colspan="3">品名</td>
+						<td>番号1</td>
+						<td>番号2</td>
+						<td>上代</td>
+						<td>下代</td>
+						<td>仕切日</td>
+						<td>仕切No</td>
+						<td></td>
+					</tr>
+				</thead>
+				<tbody>
+					<tr th:each="sales : ${purchaseList}">
 					<td th:text="${sales.id}"></td>
 					<td th:text="${#dates.format(sales.jutyuDate, 'yyyy/MM/dd')}">2022/02/07</td>
 					<td th:text="${#dates.format(sales.keijoDate, 'yyyy/MM/dd')}">2022/02/07</td>
@@ -50,14 +49,13 @@
 					<td th:text="${#numbers.formatInteger(sales.gedai, 0, 'COMMA')}">400,000</td>
 					<td th:text="${#dates.format(sales.shikiriDate, 'yyyy/MM/dd')}">2022/02/07</td>
 					<td th:text="${sales.shikiriNo}">541369</td>
-					<td th:text="${sales.customer.name}">山田正</td>
 					<td class="align-middle"><button type="button"
 							class="btn btn-secondary btn-sm">編集</button></td>
 				</tr>
-			</tbody>
-		</table>
-		<!-- ページング -->
-		<div th:replace="contents/component/pagenation :: page_contents"></div>
+				</tbody>
+			</table>
+			<div th:replace="contents/component/pagenation :: page_contents"></div>
+		</div>
 	</div>
 </body>
 </html>
