リダイレクト処理等

--- a/src/main/resources/templates/contents/component/pagenation.html
+++ b/src/main/resources/templates/contents/component/pagenation.html
@@ -8,7 +8,7 @@
 
 <body>
     <div th:fragment="page_contents">
-        <nav aria-label="Page navigation">
+        <nav aria-label="Page navigation" class="pb-2">
             <ul class="pagination justify-content-center">
                 <!--/* 前ページ */-->
                 <li class="page-item" th:classappend="${page.first} ? 'disabled'"><a class="page-link"
